--- a/backend/package.json
+++ b/backend/package.json
@@ -46,6 +46,7 @@
     "sequelize": "^6.37.3",
     "sharp": "^0.33.3",
     "slugify": "^1.6.6",
+    "sqlite3": "^5.1.7",
     "uuid": "^9.0.1",
     "winston": "^3.13.0",
     "winston-daily-rotate-file": "^5.0.0",
@@ -65,7 +66,9 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "form-data": "^4.0.4",
     "jest": "^29.7.0",
+    "node-fetch": "^2.7.0",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "sequelize-cli": "^6.6.2",
